# protobuf-cpp-example

./: .gitmodules  CMakeLists.txt  README.md  addressbook.pb.h  reading.cpp  writing.cpp
protos/: addressbook.pb.cc
src/: reading.cpp  writing.cpp
